--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "Life is simple.Make the choices and don't look back."
 ---
 
 {% for post in paginator.posts %}
