--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Make a choice and never look back."
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/post-bg-alex.jpg"
 ---
 
 <!-- Language Selector -->
